nextcloud/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 3306
      containers:
        - name: mariadb
          image: mariadb:10.5.4
          args:
            - "--transaction-isolation=READ-COMMITTED"
            - "--binlog-format=ROW"
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 500m
              memory: 2G
            requests:
              cpu: 500m
              memory: 2G
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: nextcloud-mariadb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512M
            requests:
              cpu: 500m
              memory: 512M

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: nextcloud
          image: nextcloud:20.0.4
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2G
            requests:
              cpu: "1"
              memory: 2G
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-core
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-apps
            - mountPath: /var/www/html/config
              name: nextcloud-config
            - mountPath: /var/www/html/data
              name: nextcloud-data
      volumes:
        - name: nextcloud-core
          persistentVolumeClaim:
            claimName: nextcloud-core
        - name: nextcloud-apps
          persistentVolumeClaim:
            claimName: nextcloud-apps
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
