nextcloud/rsync.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rsync
  namespace: nextcloud
spec:
  containers:
    - name: rsync
      image: eeacms/rsync:latest
      args:
        - server
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 22
      volumeMounts:
        - mountPath: /data 
          name: nextcloud-data
  volumes:
    - name: nextcloud-data
      persistentVolumeClaim:
        claimName: nextcloud-data
