nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      name: web
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
spec:
  selector:
    app: onlyoffice
  ports:
    - port: 80
      targetPort: 80
      name: web
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
      protocol: TCP
