nextcloud/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: onlyoffice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - docs.vitalbeats.dev
      secretName: onlyoffice-tls
  rules:
    - host: docs.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: onlyoffice
              servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
spec:
  tls:
    - hosts:
        - cloud.vitalbeats.dev
      secretName: nextcloud-tls
  rules:
    - host: cloud.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: nextcloud
              servicePort: 80
